# avaliacao_ai

./: .env  .env.example  .gitignore  DICAS.md  GUIA_PROFESSOR.md  README.md  gemini_service.py  main.py  models.py  pyproject.toml  quiz.json
